--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.14.0",
+    "@supabase/supabase-js": "^2.56.1",
     "class-validator": "^0.14.2",
     "mysql2": "^3.14.3",
     "reflect-metadata": "^0.2.2",
