--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-
-    
-      "test-admin": "ts-node src/test-admin.ts"
+    "test-admin": "ts-node src/test-admin.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -29,6 +27,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.14.0",
     "@supabase/supabase-js": "^2.56.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
     "mysql2": "^3.14.3",
