--- a/.GitHub/Workflows/ci.yml
+++ b/.GitHub/Workflows/ci.yml
@@ -1,12 +1,15 @@
 name: CI - Build and Test
+
 on:
   push:
-    branches: -develop
-      -main
-      -feature/*
-pull_request:
-  branches: -develop
-    -main
+    branches:
+      - develop
+      - main
+      - 'feature/*'
+  pull_request:
+    branches:
+      - develop
+      - main
 
 jobs:
   build:
@@ -19,15 +22,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run lint
         run: npm run lint
 
       - name: Run unit tests
         run: npm run test
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
 
-      - name: Run e2e tests
-        run: npm run test:e2e
+      - name: Upload test coverage
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage
+          path: coverage/
