--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "test:integration": "jest --config ./test/jest-integration.json",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test-admin": "ts-node src/test-admin.ts"
+    "test-admin": "ts-node src/test-admin.ts",
     "test:all": "npm run test:unit && npm run test:integration",
     "test:ci": "jest --coverage --maxWorkers=2"
   },
